resolves #78